Update contact links in payment area

--- a/docs/de-de/modules/payment/pages/zahlungsarten-verwalten.adoc
+++ b/docs/de-de/modules/payment/pages/zahlungsarten-verwalten.adoc
@@ -22,7 +22,7 @@ Standard-Zahlungsart festlegen:
 [#30]
 == Zahlungsart in Kundenklasse erlauben
 
-In den Grundeinstellungen deiner Kundenklassen müssen Zahlungsarten erlaubt sein. Diese Einstellungen betreffen z.B. auch die *Standard-Endkunden*. Neue Zahlungsarten müssen den erlaubten Zahlungsarten hinzugefügt werden. Genauso kannst du hier Zahlungsarten für bestimmte Kundenklassen ausschließen, indem du die Zahlungsarten aus der Liste entfernst. Prüfe die Einstellungen unter *Erlaubte Zahlungsarten* deiner Kundenklassen, nachdem du eine neue Zahlungsart in deinem System eingerichtet hast. Weitere Details dazu findest du auf der Handbuchseite xref:crm:kontakte-verwalten.adoc#15[Kundenklassen].
+In den Grundeinstellungen deiner Kundenklassen müssen Zahlungsarten erlaubt sein. Diese Einstellungen betreffen z.B. auch die *Standard-Endkunden*. Neue Zahlungsarten müssen den erlaubten Zahlungsarten hinzugefügt werden. Genauso kannst du hier Zahlungsarten für bestimmte Kundenklassen ausschließen, indem du die Zahlungsarten aus der Liste entfernst. Prüfe die Einstellungen unter *Erlaubte Zahlungsarten* deiner Kundenklassen, nachdem du eine neue Zahlungsart in deinem System eingerichtet hast. Weitere Details dazu findest du auf der Handbuchseite xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklassen].
 
 [TIP]
 .SSL-Zertifikat und Verschlüsselung
@@ -33,7 +33,7 @@ Wir empfehlen dir grundsätzlich, wenn du mit Zahlungs- und Kundendaten arbeiten
 [#50]
 == Rabatt auf Zahlungsart gewähren
 
-Du kannst für deine Kund:innen Rabatt auf Zahlungsarten gewähren. Dies ist eine Einstellung in den Kundenklassen, die es ermöglicht im Webshop einen Rabatt auf bestimmte Zahlungsarten anzubieten. Wie du einen Rabatt auf eine Zahlungsart in einer Kundenklasse festlegst, erfährst du im Kapitel xref:crm:kontakte-verwalten.adoc#28[Rabatt auf Zahlungsart einrichten].
+Du kannst für deine Kund:innen Rabatt auf Zahlungsarten gewähren. Dies ist eine Einstellung in den Kundenklassen, die es ermöglicht im Webshop einen Rabatt auf bestimmte Zahlungsarten anzubieten. Wie du einen Rabatt auf eine Zahlungsart in einer Kundenklasse festlegst, erfährst du im Kapitel xref:crm:vorbereitende-einstellungen.adoc#rabatt-zahlungsart[Rabatt auf Zahlungsart einrichten].
 
 [#60]
 ==  Versand ohne Zahlungseingang
