--- a/docs/en-gb/modules/payment/pages/managing-bank-details.adoc
+++ b/docs/en-gb/modules/payment/pages/managing-bank-details.adoc
@@ -52,13 +52,13 @@ You can save the customer's bank details in the *Settings* tab of a customer's d
 Saving the customer's bank details:
 
 . Go to *CRM » Contacts*.
-. Search (icon:search[role="blue"]) the contact by means of the filter settings as described in the xref:crm:managing-contacts.adoc#200[Searching for a contact] chapter. +
+. Search for the contact by means of the filter settings. Note the explanations about the filters on the xref:crm:search-contact.adoc#[Searching for a contact] page. +
 → The contacts that correspond to the search criteria entered are displayed.
 . Click in the line of the contact. +
 → The detail view of the contact opens.
-. Click on *Bank data*.
+. Click on *Bank data* on the left side.
 . Carry out the settings as desired. Pay attention to the information given in <<table-saving-customer-bank-details>>.
-. *Save* (icon:save[role="green"]) the settings.
+. *Save* (icon:save[set=material]) the settings.
 
 [[table-saving-customer-bank-details]]
 .saving the customer's bank details
@@ -654,21 +654,21 @@ Customer*
 [#270]
 === Sending an email template with the group function
 
-The email template is sent by clicking on the *Group function* button under *CRM » Contacts*.
+The email template is sent by using the group function in the *CRM » Contacts* menu.
 
 [.instruction]
 Sending an email template:
 
 . Go to *CRM » Contacts*.
-. Search (icon:search[role="blue"]) the contact by means of the filter settings as described in the xref:crm:managing-contacts.adoc#200[Searching for a contact] chapter. +
+. Search for the contacts by means of the filter settings. Note the explanations about the filters on the xref:crm:search-contact.adoc#[Searching for a contact] page. +
 → The contacts that correspond to the search criteria entered are displayed.
-. Click on *Group function*.
-. Place check marks next to those customers who the email template should be sent to.
-. Select the previously created SEPA email template from the *Send email template* drop-down list.
-. Place a check mark next to *Send email template*.
-. Click on *Apply*.
+. Select (icon:check-square[role="blue"]) the contacts that you want to send an email template to.
+. Click in the toolbar on the top on *Send email template* (icon:forward_to_inbox[set=material]). +
+→ The *Send email template* window opens.
+. Select the previously crated SEPA email template from the drop-down list.
+. Click on *Execute*.
 
-For further information, refer to the xref:crm:managing-contacts.adoc#[Managing contacts ] page of the manual. Specifically, refer to the chapter xref:crm:managing-contacts.adoc#510[Carrying out the group function].
+For further information, refer to the xref:crm:edit-contact.adoc#[Editing a contact] page of the manual. Specifically, refer to the chapter xref:crm:edit-contact.adoc#group-function[Carrying out the group function].
 
 [#280]
 === Activating SEPA payments in the bank details
@@ -679,13 +679,13 @@ Carry out the following setting once a customer has signed and returned the SEPA
 Activating SEPA direct debit mandate in the bank details:
 
 . Go to *CRM » Contacts*.
-. Search (icon:search[role="blue"]) the contact by means of the filter settings as described in the xref:crm:managing-contacts.adoc#200[Searching for a contact] chapter. +
+. Search for the contacts by means of the filter settings. Note the explanations about the filters on the xref:crm:search-contact.adoc#[Searching for a contact] page. +
 → The contacts that correspond to the search criteria entered are displayed.
 . Click in the line of the contact. +
 → The detail view of the contact opens.
-. Click on *Bank data*.
-. Activate *SEPA direct debit mandate*.
-. *Save* (icon:save[role="green"]) the settings.
+. Click on *Bank data* on the left side.
+. Activate (icon:toggle_on[set=material, role=skyBlue]) *SEPA direct debit mandate*.
+. *Save* (icon:save[set=material]) the settings.
 
 [#290]
 === Automating SEPA payments
