--- a/docs/de-de/modules/payment/pages/bankdaten-verwalten.adoc
+++ b/docs/de-de/modules/payment/pages/bankdaten-verwalten.adoc
@@ -49,13 +49,13 @@ Im Tab *Einstellungen* in einem Kontaktdatensatz kannst du die Bankdaten des Kun
 Bankdaten des Kunden speichern:
 
 . Öffne das Menü *CRM » Kontakte*.
-. Suche (icon:search[role="blue"]) den Kontakt anhand der Filtereinstellungen wie im Kapitel xref:crm:kontakte-verwalten.adoc#200[Kontakt suchen] beschrieben. +
+. Suche den Kontakt anhand der Filtereinstellungen. Beachte dazu die Erläuterungen zu den Filtern auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen]. +
 → Die Kontakte, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Kontakts. +
 → Die Detailansicht des Kontakts wird geöffnet.
-. Klicke im Kontextmenü auf *Bankdaten*.
+. Klicke in der Navigation auf der linken Seite auf *Bankdaten*.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<tabelle-bankdaten-kunden-speichern>>.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
+. *Speichere* (icon:save[set=material]) die Einstellungen.
 
 [[tabelle-bankdaten-kunden-speichern]]
 .Bankdaten für Kunden speichern
@@ -648,20 +648,21 @@ Kunde*
 [#270]
 === E-Mail-Vorlage per  Gruppenfunktion versenden
 
-Die E-Mail-Vorlage kannst du alternativ auch in der *Kontaktübersicht* über die *Gruppenfunktion* versenden.
+Die E-Mail-Vorlage kannst du alternativ auch in der *Kontaktübersicht* über die Gruppenfunktion versenden.
 
 [.instruction]
 E-Mail-Vorlage versenden:
 
 . Öffne das Menü *CRM » Kontakte*.
-. Suche (icon:search[role="blue"]) den Kontakt anhand der Filtereinstellungen wie im Kapitel xref:crm:kontakte-verwalten.adoc#200[Kontakt suchen] beschrieben. +
+. Suche den Kontakt anhand der Filtereinstellungen. Beachte dazu die Erläuterungen zu den Filtern auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen]. +
 → Die Kontakte, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
-. Klicke auf *Gruppenfunktion*.
-. Markiere die Kontakte in der Übersicht, an die die E-Mail-Vorlage versendet werden soll.
-. Wähle bei der Option *E-Mail-Vorlage senden* die zuvor erstellte E-Mail-Vorlage zur SEPA-Information aus.
-. Klicke auf *Gruppenfunktion*.
+. Wähle (icon:check_box[set=material, role=skyBlue]) die Kontakte, an die du die E-Mail-Vorlage senden möchtest. 
+. Klicke in der Symbolleiste oben auf *E-Mail-Vorlage senden* (icon:forward_to_inbox[set=material]). +
+→ Das Fenster *E-Mail-Vorlage senden* öffnet sich.
+. Wähle die zuvor erstellte E-Mail-Vorlage zur SEPA-Information aus der Dropdown-Liste.
+. Klicke auf *Ausführen*.
 
-Weitere Details dazu findest du im Kapitel *Gruppenfunktion nutzen* der Handbuchseite xref:crm:kontakte-verwalten.adoc#510[Kontake verwalten].
+Weitere Details dazu findest du im Kapitel xref:crm:kontakt-bearbeiten.adoc#gruppenfunktion[Gruppenfunktion nutzen] der Handbuchseite xref:crm:kontakt-bearbeiten.adoc#[Kontakt bearbeiten].
 
 [#280]
 === SEPA-Zahlungsverkehr in den Bankdaten aktivieren
@@ -672,13 +673,13 @@ Wenn du das unterschriebene SEPA-Lastschriftmandat eines Kunden erhalten hast, i
 SEPA-Lastschriftmandat in den Bankdaten aktivieren:
 
 . Öffne das Menü *CRM » Kontakte*.
-. Suche (icon:search[role="blue"]) den Kontakt anhand der Filtereinstellungen wie im Kapitel xref:crm:kontakte-verwalten.adoc#200[Kontakt suchen] beschrieben. +
+. Suche den Kontakt anhand der Filtereinstellungen. Beachte dazu die Erläuterungen zu den Filtern auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen]. +
 → Die Kontakte, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Kontakts. +
 → Die Detailansicht des Kontakts wird geöffnet.
-. Klicke im Kontextmenü auf *Bankdaten*.
-. Aktiviere *SEPA-Lastschriftmandat*.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
+. Klicke in der Navigation auf der linken Seite auf *Bankdaten*.
+. Aktiviere (icon:toggle_on[set=material, role=skyBlue]) *SEPA-Lastschriftmandat*.
+. *Speichere* (icon:save[set=material]) die Einstellungen.
 
 Weitere Informationen zu Bankdaten findest du im Kapitel xref:payment:bankdaten-verwalten.adoc#63[Bankdaten von Kunden speichern].
 
