--- a/docs/en-gb/modules/payment/pages/managing-payment-methods.adoc
+++ b/docs/en-gb/modules/payment/pages/managing-payment-methods.adoc
@@ -22,7 +22,7 @@ Specifying the default payment method:
 [#30]
 == Permitting the payment method in a customer class
 
-You need to permit payment methods in the basic settings of your customer classes. These settings also relate to the *standard end customers*. New payment methods need to be added to the list of permitted payment methods. Vice versa, you can exclude payment methods from this list to prevent the payment methods from being used by a particular customer class. After having set up a new payment method in your system, check the settings under *Permitted payment methods* for each of your customer classes. For further information, refer to the xref:crm:managing-contacts.adoc#15[Creating a customer class] page.
+You need to permit payment methods in the basic settings of your customer classes. These settings also relate to the *standard end customers*. New payment methods need to be added to the list of permitted payment methods. Vice versa, you can exclude payment methods from this list to prevent the payment methods from being used by a particular customer class. After having set up a new payment method in your system, check the settings under *Permitted payment methods* for each of your customer classes. For further information, refer to the xref:crm:preparatory-settings.adoc#create-customer-class[Creating a customer class] chapter.
 
 [TIP]
 .SSL certificate and encryption
@@ -33,7 +33,7 @@ We generally recommend that you use xref:business-decisions:domains.adoc#[SSL en
 [#50]
 == Offering a discount based on a payment method
 
-You can offer your customers a discount when they use a specific payment method. This is a customer class setting which enables you to offer a discount on payment methods in the online shop. For information on how to set this up, refer to the chapter xref:crm:managing-contacts.adoc#28[Setting up a discount based on the method of payment] of the manual.
+You can offer your customers a discount when they use a specific payment method. This is a customer class setting which enables you to offer a discount on payment methods in the online shop. For information on how to set this up, refer to the chapter xref:crm:preparatory-settings.adoc#discount-payment-method[Setting up a discount based on the method of payment] of the manual.
 
 [#60]
 ==  Shipping without payment
