update contact links on glossary page

--- a/docs/de-de/modules/glossar/partials/kundentyp.adoc
+++ b/docs/de-de/modules/glossar/partials/kundentyp.adoc
@@ -1,3 +1,3 @@
 [#kundentyp]
 Kundentyp:: Dient der Einordnung und Unterscheidung von Kontakten. Standardmäßig sind bereits einige Typen in deinem System vorhanden. Eigene Typen können hinzugefügt werden. +
-* Weitere Informationen findest du auf der Handbuchseite xref:crm:kontakte-verwalten.adoc#20[Kontakte].
+* Weitere Informationen findest du auf der Handbuchseite xref:crm:vorbereitende-einstellungen.adoc#typ-erstellen[Kontakte].
