--- a/docs/en-gb/modules/glossary/partials/customer-class.adoc
+++ b/docs/en-gb/modules/glossary/partials/customer-class.adoc
@@ -1,3 +1,3 @@
 [#customer-class]
 Customer class:: Allows you to divide your customer base into subgroups based on specific criteria. Afterwards, you can define different discounts for the different customer classes. +
-* For further information, refer to the xref:crm:managing-contacts.adoc#15[Managing contacts] page.
+* For further information, refer to the xref:crm:preparatory-settings.adoc#create-customer-class[Managing contacts] page.
