--- a/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
+++ b/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
@@ -10,10 +10,10 @@ Das Menü *Aufträge » Paketinhaltsliste 2.0* ist wie folgt aufgebaut:
 image::fulfillment:pcl-2-0-menu-overview-de.png[width=640, height=360]
 
 * *Navigation*: Hier navigierst du durch die einzelnen Bereiche des Menüs. Der aktuell ausgewählte Bereich (blaue Schrift) wird im Hauptfenster rechts angezeigt. Klicke auf icon:bars[], um die Navigationsleiste ein- und auszublenden. +
-* *Toolbar*: Hier kannst du nach Aufträgen <<#search-orders, suchen>>, die <<#spalten-konfigurieren, Spalten konfigurieren>>, die Ergebnisse pro Seite, die du angezeigt haben möchtest, einstellen und durch die Seiten mit den Aufträgen klicken. +
+* *Toolbar*: Hier kannst du nach Aufträgen <<#search-orders, suchen>>, die <<#customise-columns, Übersicht individuell gestalten>>, die Ergebnisse pro Seite, die du angezeigt haben möchtest, einstellen und durch die Seiten mit den Aufträgen klicken. +
 * *Hauptfenster*: Hier wird der aktuell geöffnete Bereich angezeigt.
 ** *Übersicht*: Wenn du eine Suche ausführst, siehst du die Ergebnisse in einer Übersicht. Die Übersicht liefert auf einen Blick Informationen zu den gefundenen Aufträgen. Zum Beispiel siehst du den Auftragstyp, die Anzahl der Artikel im Auftrag oder den Status des Auftrags.
-** *Detailansicht*: Wenn du einen Auftrag öffnest, werden die <#work-with-pallets, Paletten>> und <<#work-with-packages, Pakete>> sowie Details zu den Inhalten im Hauptfenster angezeigt.
+** *Detailansicht*: Wenn du einen Auftrag öffnest, werden die <<#work-with-pallets, Paletten>> und <<#work-with-packages, Pakete>> sowie Details zu den Inhalten im Hauptfenster angezeigt.
 
 [discrete]
 [#new-features]
@@ -117,27 +117,50 @@ Klicke in der Zeile des gespeicherten Filters auf icon:star_border[set=material]
 
 Wenn du einen anderen Filter als Standard festlegen möchtest, deaktiviere den aktuell gewählten Standardfilter mit einem Klick auf icon:star[set=material] *Nicht als Standard verwenden*.
 
-[#spalten-konfigurieren]
-== Spalten konfigurieren
+[#customise-columns]
+=== Übersicht individuell gestalten
 
-In der Übersicht der Paketinhaltsliste 2.0 kannst du dir die folgenden Spalten anzeigen lassen:
+Du kannst die Übersicht an deine Bedürfnisse anpassen.
 
+[cols="1,6a"]
+|====
+|Symbol |Erläuterung
+
+| icon:settings[set=material]
+|Welche Spalten sollen in der Übersicht enthalten sein?
+
+. Klicke auf *Spalten konfigurieren* (icon:settings[set=material]).
+. Wähle alle von dir gewünschten Spalten (icon:check_box[set=material, role=skyBlue]).
+. Klicke auf *Bestätigen*.
+
+[.collapseBox]
+.Verfügbare Spalten
+--
 * ID
 * Auftragstyp
 * Anzahl der Artikel
 * Auftragsstatus
 * Erstellt am
 
-Passe die Tabelle deinen Bedürfnissen und deinem Arbeitsablauf an. Du kannst entscheiden, welche Spalten angezeigt werden und außerdem die Reihenfolge bestimmen.
+--
 
-[.instruction]
-Spalten konfigurieren:
+| icon:drag_indicator[set=material]
+|In welcher Reihenfolge sollen die Spalten angezeigt werden?
 
-. Klicke auf *Spalten konfigurieren* (icon:settings[set=material]). +
-→ Das Fenster *Spalten konfigurieren* wird geöffnet.
-. Wähle, welche Spalten angezeigt werden sollen.
-. Verschiebe (icon:sort[set=material]) die Spalten so, dass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
-. Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
+. Klicke auf *Spalten konfigurieren* (icon:settings[set=material]).
+. Bewege deinen Mauszeiger über einen Eintrag mit dem Symbol icon:drag_indicator[set=material]. +
+→ Dein Mauszeiger ändert seine Form (icon:open_with[set=material]).
+. Ziehe den Eintrag an die gewünschte Stelle.
+. Klicke auf *Bestätigen*.
+
+| icon:arrow_downward[set=material] / icon:arrow_upward[set=material]
+|Sollen die Ergebnisse in aufsteigender oder in absteigender Reihenfolge angezeigt werden?
+
+. Bewege deinen Mauszeiger über eine Spaltenüberschrift. +
+→ Ein Pfeil wird angezeigt. +
+*_Hinweis:_* Nicht alle Spaltenüberschriften können sortiert werden.
+. Klicke auf icon:arrow_downward[set=material] oder icon:arrow_upward[set=material], um die Sortierreihenfolge zu ändern.
+|====
 
 [#gruppenfunktion-nutzen]
 == Gruppenfunktion nutzen
@@ -173,7 +196,7 @@ Sobald du einen Auftrag markiert hast (icon:check_box[set=material, role=skyBlue
 
 Du möchtest Zeit sparen und den Fulfillment-Prozess lieber jemand anderem überlassen? Kein Problem - der Amazon FBA-Service macht es möglich. Dank der Verknüpfung zwischen der Paketinhaltsliste und Amazon FBA kannst du mit wenigen Klicks einstellen, welche deiner Artikel über diesen Service versendet werden sollen. Entscheidest du dich für die Abwicklung über Amazon FBA, übernimmt Amazon ebenfalls den Kundenservice und kümmert sich um eventuelle Rücksendungen.
 In einem Anlieferplan, den du auf Amazon erstellst, teilst du Amazon zunächst mit, welche Ware du in das Amazon FBA-Lager schicken möchtest. Gib dort an, welche Artikel du in welcher Menge und in welchen Paketen sendest. Sobald ein Auftrag existiert, kann Amazon die Ware dann in deinem Namen an die Endkund:innen verschicken. +
-Weitere Informationen zu den Einstellungen für den Amazon FBA-Service findest du auf der Handbuchseite xref:maerkte:amazon-fba-nutzen.adoc#120[Amazon: FBA-Service nutzen].
+Weitere Informationen zu den Einstellungen für den Amazon FBA-Service in Verbindung mit der Paketinhaltsliste 2.0 findest du auf der Handbuchseite xref:maerkte:amazon-fba-nutzen.adoc#120[Amazon: FBA-Service nutzen].
 
 ////
 Neuen Button im Menü Amazon FBA Inbound auf Inbound-Seite beschreiben + Links zur alten PCL anpassen und stattdessen auf neue PCL verlinken oder laufen beide parallel …dann alte Konfig kopieren und für neuen Button anpassen??. - Kathrin kontaktieren
