--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -94,7 +94,7 @@ Einstellungen vornehmen:
 | *Dateiname*
 a| Gib einen Dateinamen ein. Mit diesem Namen wird die exportierte Datei gespeichert. +
 *_Tipp:_* Die Dateiendung wird beim Export automatisch ergänzt.
-Gib deshalb den Dateinamen ohne eine Dateiendung an.
+Gib deshalb den Dateinamen ohne eine Dateiendung ein.
 Dateiendungen sind zum Beispiel `.csv` oder `.txt`.
 
 *_Tipp:_* Verwende Platzhalter, um beim Export automatisch weitere Informationen zum Dateinamen hinzuzufügen.
@@ -139,6 +139,30 @@ Die folgenden Platzhalter sind verfügbar:
 
 ! *$second*
 ! Sekunde des Exports wird in den Dateinamen eingefügt.
+
+! *$lastChangeTimestamp*
+! Der Zeitstempel der letzten Änderung am Katalog wird in den Dateinamen eingefügt.
+
+! *$lastChangeDatetime*
+! Das Datum und die Uhrzeit der letzten Änderung des Katalogs wird in den Dateinamen eingefügt.
+
+! *$lastChangeYear*
+! Das Jahr der letzten Änderung des Katalogs wird in den Dateinamen eingefügt.
+
+! *$lastChangeMonth*
+! Der Monat der letzten Änderung des Katalogs wird in den Dateinamen eingefügt.
+
+! *$lastChangeDay*
+! Der Tag der letzten Änderung des Katalogs wird in den Dateinamen eingefügt.
+
+! *$lastChangeHour*
+! Die Stunde der letzten Änderung des Katalogs wird in den Dateinamen eingefügt.
+
+! *$lastChangeMinute*
+! Die Minute der letzten Änderung des Katalogs wird in den Dateinamen eingefügt.
+
+! *$lastChangeSecond*
+! Die Sekunde der letzten Änderung des Katalogs wird in den Dateinamen eingefügt.
 !===
 --
 
