--- a/docs/en-gb/modules/data/pages/FormatDesigner.adoc
+++ b/docs/en-gb/modules/data/pages/FormatDesigner.adoc
@@ -5,7 +5,7 @@
 
 include::partial$formatdesigner-export-intro.adoc[]
 
-This manual page explains the first step. Here you'll learn how to xref:data:FormatDesigner.adoc#50[set up the FormatDesigner plugin], how to xref:data:FormatDesigner.adoc#100[create data formats] and <<data/exporting-data/FormatDesigner/format-types# which types of data>> you can export.
+This manual page explains the first step. Here you'll learn how to xref:data:FormatDesigner.adoc#50[set up the FormatDesigner plugin], how to xref:data:FormatDesigner.adoc#100[create data formats] and xref:data:format-types.adoc#[which types of data] you can export.
 
 The second step, i.e. the actual export, is done in the menu *Data » Elastic export*. You can find further information about the second step on the xref:data:elastic-export.adoc#[elastic export] manual page.
 
