show main id in order portlet

--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -532,6 +532,7 @@ Mit einem Klick auf *Optionen* (icon:add[set=material]) oben rechts erstellst du
 Mit einem Klick auf *Spalten konfigurieren* (icon:settings[set=material]) oben rechts entscheidest du, welche Spalten im Bereich *Aufträge* angezeigt werden. Klicke auf icon:sort[set=material], um die Reihenfolge der Spalten per Drag-and-drop zu verschieben. Die folgenden Spalten sind verfügbar:
 
 * Auftrags-ID 
+* Haupt(auftrag)
 * Auftragsstatus
 * Auftragstyp
 * Rechnungsnummer
