--- a/docs/en-gb/modules/crm/pages/edit-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/edit-contact.adoc
@@ -405,6 +405,7 @@ Click on *Options* (icon:add[set=material]) on the top right to create a new ord
 Click on *Configure columns* (icon:settings[set=material]) on the top right and decide which columns to show in the *Orders* area. Click on icon:sort[set=material] to change the order of the columns with drag-and-drop. The following columns are available:
 
 * Order ID 
+* Main (order)
 * Order status
 * Order type
 * Invoice number
