--- a/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
+++ b/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
@@ -174,21 +174,21 @@ Sobald du einen Auftrag markiert hast (icon:check_box[set=material, role=skyBlue
 |Bedienelement |Erläuterung
 
 |*CSV-Datei exportieren*
-|Exportiert die CSV-Datei von allen gewählten Aufträgen.
+|Exportiert die Inhalte der gewählten Aufträge als CSV-Datei.
 
 |*Alle Paletten schließen*
-|Schließt alle Paletten. +
+|Schließt alle Paletten der gewählten Aufträge. +
 *_Beachte:_* Sobald eine Palette geschlossen ist, kann diese nicht weiter bearbeitet werden.
 
 |*Alle Pakete schließen*
-|Schließt alle Pakete. +
+|Schließt alle Pakete der gewählten Aufträge. +
 *_Beachte:_* Sobald ein Paket geschlossen ist, kann dieses nicht weiter bearbeitet werden.
 
 |*Alle Paletten löschen*
-|Löscht alle Paletten.
+|Löscht alle Paletten der gewählten Aufträge.
 
 |*Alle Pakete löschen*
-|Löscht alle Pakete.
+|Löscht alle Pakete der gewählten Aufträge.
 |====
 
 [#use-amazon-fba-service]
@@ -222,7 +222,8 @@ Palette erstellen:
 . Suche den Auftrag anhand der Filtereinstellungen. Beachte dazu die Erläuterungen in <<#search-orders, Aufträge suchen>>. +
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
-. Klicke oben auf icon:plus[role="darkGrey"] *Inhalt hinzufügen* und wähle die Option *Palette erstellen*.
+. Klicke oben auf icon:plus[role="darkGrey"] *Inhalt hinzufügen* und wähle die Option *Palette erstellen*. +
+*_Oder:_* Klicke links in der Navigation neben dem Auftrag auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option icon:plus[role="darkGrey"] *Transporteinheit hinzufügen* > icon:plus[role="darkGrey"] *Paket erstellen*.
 → Das Fenster *Neue Palette erstellen* wird geöffnet.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-create-new-pallet>>.
 . Klicke auf icon:plus[role="darkGrey"] *Palette erstellen*. +
@@ -270,7 +271,8 @@ Palette konfigurieren:
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
 . Setze links neben der Palette, die du konfigurieren möchtest, einen Haken (icon:check-square[role="blue"]).
-. Klicke anschließend oben auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option *Palette konfigurieren* (icon:settings[set=material]). +
+. Klicke anschließend oben auf die weiteren Optionen (icon:more_vert[set=material]).
+. Wähle die Option *Palette konfigurieren* (icon:settings[set=material]). +
 *_Oder:_* Klicke links in der Seitennavigation auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option *Palette konfigurieren* (icon:settings[set=material]). +
 → Das Fenster *Palette konfigurieren* wird geöffnet.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-create-new-pallet>>. +
@@ -290,7 +292,8 @@ Palette schließen:
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
 . Setze links neben der Palette, die du schließen möchtest, einen Haken (icon:check-square[role="blue"]).
-. Klicke anschließend oben auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option *Palette schließen* (icon:lock[set=material]). +
+. Klicke anschließend oben auf die weiteren Optionen (icon:more_vert[set=material]).
+. Wähle die Option *Palette schließen* (icon:lock[set=material]). +
 *_Oder:_* Klicke links in der Seitennavigation auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option *Palette schließen* (icon:lock[set=material]). +
 → Das Fenster *Palette schließen* wird geöffnet.
 . Wenn du sicher bist, dass du die Palette schließen möchtest, klicke auf *Palette schließen* (icon:lock[set=material]). +
@@ -309,7 +312,8 @@ Palette löschen:
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
 . Setze links neben der Palette, die du löschen möchtest, einen Haken (icon:check-square[role="blue"]).
-. Klicke anschließend oben auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option *Palette löschen* (icon:delete[set=material]). +
+. Klicke anschließend oben auf die weiteren Optionen (icon:more_vert[set=material]).
+. Wähle die Option *Palette löschen* (icon:delete[set=material]). +
 *_Oder:_* Klicke links in der Seitennavigation auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option *Palette löschen* (icon:delete[set=material]). +
 → Das Fenster *Palette löschen* wird geöffnet.
 . Wenn du sicher bist, dass du die Palette löschen möchtest, klicke auf *Palette löschen* (icon:delete[set=material]). +
@@ -318,7 +322,7 @@ Palette löschen:
 [#work-with-packages]
 == Mit Paketen arbeiten
 
-Pakete sind die zweitgrößte Verpackungseinheit in einem Auftrag der Paketinhaltsliste und enthalten Artikel bzw. Varianten. Pakete können auf eine Palette gepackt werden. In den folgenden Kapiteln ist beschrieben, wie du mit Paketen arbeitest. Du kannst <<#create-package, neue Pakete erstellen>>, <<#add-item-to-package, Artikel einem Paket hinzufügen>>, <<#edit-items, Artikel bearbeiten>>, <<#add-package-to-pallet, Pakete auf eine Palette stellen>>, die Funktion <<#use-quick-packing, Schnelles Packen>> verwenden, <<#configure-package, Pakete konfigurieren>>, den <<#change-scan-type, Scan-Typ ändern>>, <<#close-package, Pakete schließen>> und <<#delete-package, Pakete löschen>>.
+Pakete sind die zweitgrößte Verpackungseinheit in einem Auftrag der Paketinhaltsliste und enthalten Artikel bzw. Varianten. In den folgenden Kapiteln ist beschrieben, wie du mit Paketen arbeitest. Du kannst <<#create-package, neue Pakete erstellen>>, <<#add-item-to-package, Artikel einem Paket hinzufügen>>, <<#edit-items, Artikel bearbeiten>>, <<#add-package-to-pallet, Pakete auf eine Palette stellen>>, die Funktion <<#use-quick-packing, Schnelles Packen>> verwenden, <<#configure-package, Pakete konfigurieren>>, den <<#change-scan-type, Scan-Typ ändern>>, <<#close-package, Pakete schließen>> und <<#delete-package, Pakete löschen>>.
 
 [#create-package]
 === Paket erstellen
@@ -332,9 +336,10 @@ Paket erstellen:
 . Suche den Auftrag anhand der Filtereinstellungen. Beachte dazu die Erläuterungen in <<#search-orders, Aufträge suchen>>. +
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
-. Klicke oben auf icon:plus[role="darkGrey"] *Inhalt hinzufügen* und wähle die Option *Paket erstellen*. +
+. Klicke oben auf icon:plus[role="darkGrey"] *Inhalt hinzufügen*.
+. Wähle die Option *Paket erstellen*. +
 → Das Fenster *Neues Paket erstellen* wird geöffnet. +
-*_Oder:_* Klicke links neben der Palette auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option icon:plus[role="darkGrey"] *Paket erstellen*.
+*_Oder:_* Klicke links in der Navigation neben dem Auftrag auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option icon:plus[role="darkGrey"] *Transporteinheit hinzufügen* > icon:plus[role="darkGrey"] *Paket erstellen*.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-create-new-package>>.
 . Klicke auf icon:plus[role="darkGrey"] *Paket erstellen*. +
 → Das Paket wird erstellt.
@@ -359,7 +364,13 @@ Paket erstellen:
 [#add-item-to-package]
 === Artikel verpacken
 
-Um Artikel zu verpacken und einem Paket hinzuzufügen, gehe vor wie folgt.
+Du hast noch unverpackte Artiekl, die du in ein Paket packen möchtest? Um Artikel zu verpacken und einem Paket hinzuzufügen, gehe vor wie folgt.
+
+[TIP]
+.Artikel per Varianten-ID hinzufügen
+======
+Bereits vorhandene Artikel müssen in der Paketinhaltsliste 2.0 nicht mehr manuell erstellt werden. Um einen Artikel mit wenigen Klicks zu einem Paket hinzuzufügen, wähle die Option *Varianten-ID* als Scan-Typ. Sobald du die Varianten-ID im Eingabefeld eingibst, wird dir der Artikel vorgeschlagen und du kannst ihn hinzufügen.
+======
 
 [.instruction]
 Artikel verpacken:
@@ -368,15 +379,15 @@ Artikel verpacken:
 . Suche den Auftrag anhand der Filtereinstellungen. Beachte dazu die Erläuterungen in <<#search-orders, Aufträge suchen>>. +
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
+. Klicke auf das Paket, um die Artikel anzuzeigen.
 . Setze links im Bereich *Unverpackte Artikel* einen Haken neben den Artikeln, die du dem Paket hinzufügen möchtest.
 . Klicke auf icon:plus[role="darkGrey"] *Artikel zum Paket hinzufügen*. +
-→ Die Artikel werden in den Bereich *Verpackte Artikel* verschoben und somit dem Paket hinzugefügt. +
-*_Tipp:_* Möchtest du dies wieder rückgängig machen, setze neben den Artikeln im Bereich *Verpackte Artikel* einen Haken und klicke auf *Artikel aus dem Paket entfernen* (icon:delete[set=material]). Klicke anschließend auf icon:delete[set=material] *Löschen*, um die Artikel wieder aus dem Paket zu entfernen.
+→ Die Artikel werden in den Bereich *Verpackte Artikel* verschoben und somit dem Paket hinzugefügt.
 
 [TIP]
-.Artikel per Varianten-ID hinzufügen
+.Verpackte Artikel aus Paket entfernen
 ======
-Bereits vorhandene Artikel müssen in der Paketinhaltsliste 2.0 nicht mehr manuell erstellt werden. Um einen Artikel mit wenigen Klicks zu einem Paket hinzuzufügen, wähle die Varianten-ID als Scan-Typ. Sobald du die Varianten-ID im Eingabefeld eingibst, wird dir der Artikel vorgeschlagen und du kannst ihn hinzufügen.
+Möchtest du Artikel aus einem Paket wieder entfernen, setze neben den Artikeln im Bereich *Verpackte Artikel* einen Haken und klicke auf *Artikel aus dem Paket entfernen* (icon:delete[set=material]). Klicke anschließend auf icon:delete[set=material] *Löschen*, um die Artikel aus dem Paket zu entfernen.
 ======
 
 [#edit-items]
@@ -413,7 +424,8 @@ Paket auf Palette stellen:
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
 . Setze neben dem Paket, das du auf eine Palette stellen möchtest, einen Haken (icon:check-square[role="blue"]). +
 *_Tipp:_* Du kannst auch mehrere Pakete auf einmal wählen und diese gesammelt auf eine Palette stellen.
-. Klicke anschließend oben auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option *Paket auf Palette stellen* (icon:table-rows[set=material]). +
+. Klicke anschließend oben auf die weiteren Optionen (icon:more_vert[set=material]).
+. Wähle die Option *Paket auf Palette stellen* (icon:table-rows[set=material]). +
 → Das Fenster *Paket auf Palette stellen* wird geöffnet.
 . Wähle die ID der Palette aus der Dropdown-Liste oder wähle die Option *Neue Palette erstellen*. +
 . Klicke auf *Paket auf Palette stellen* (icon:table-rows[set=material]).
@@ -434,7 +446,8 @@ Schnelles Packen verwenden:
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
 . Setze neben dem Paket oder der Palette, für die du das Schnelle Packen verwenden möchtest, einen Haken (icon:check-square[role="blue"]). +
 *_Tipp:_* Du kannst auch mehrere Pakete, mehrere Paletten oder eine Kombination aus Paketen und Paletten für das Schnelle Packen wählen.
-. Klicke auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option *Schnelles Packen* (icon:stock[set=plenty]). +
+. Klicke auf die weiteren Optionen (icon:more_vert[set=material]).
+. Wähle die Option *Schnelles Packen* (icon:stock[set=plenty]). +
 → Das Fenster *Schnelles Packen* wird geöffnet.
 . Klappe links die Artikeleinstellungen auf (icon:chevron-right[set=material]).
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-quick-packing>>. +
@@ -487,10 +500,10 @@ Scan-Typ ändern:
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
 . Klicke auf ein Paket. +
-→ Die Artikel werden angezeigt.
+→ Die im Paket enthaltenen Artikel werden angezeigt.
 . Klicke oben rechts auf *Scan-Typ ändern* (icon:settings[set=material]).
 . Wähle eine der verfügbaren Optionen. +
-→ Der Scan-Typ wird angepasst.
+→ Der Scan-Typ wird den Einstellungen entsprechend angepasst.
 
 [#configure-package]
 === Paket konfigurieren
@@ -505,7 +518,8 @@ Paket konfigurieren:
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
 . Setze links neben dem Paket, das du konfigurieren möchtest, einen Haken (icon:check-square[role="blue"]).
-. Klicke anschließend oben auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option *Paket konfigurieren* (icon:settings[set=material]). +
+. Klicke anschließend oben auf die weiteren Optionen (icon:more_vert[set=material]).
+. Wähle die Option *Paket konfigurieren* (icon:settings[set=material]). +
 *_Oder:_* Klicke links in der Seitennavigation auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option *Paket konfigurieren* (icon:settings[set=material]). +
 → Das Fenster *Paket konfigurieren* wird geöffnet.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-configure-package>>. +
@@ -543,7 +557,8 @@ Paket schließen:
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
 . Setze links neben dem Paket, das du schließen möchtest, einen Haken (icon:check-square[role="blue"]).
-. Klicke anschließend oben auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option *Paket schließen* (icon:lock[set=material]). +
+. Klicke anschließend oben auf die weiteren Optionen (icon:more_vert[set=material]).
+. Wähle die Option *Paket schließen* (icon:lock[set=material]). +
 *_Oder:_* Klicke links in der Seitennavigation auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option *Paket schließen* (icon:lock[set=material]). +
 → Das Fenster *Paket schließen* wird geöffnet.
 . Wenn du sicher bist, dass du das Paket schließen möchtest, klicke auf *Paket schließen* (icon:lock[set=material]). +
@@ -581,7 +596,8 @@ Aufträge schließen:
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen. +
 → Der Auftrag wird links in der Navigation angezeigt.
-. Klicke auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option (icon:lock[set=material]) *Auftrag schließen*. +
+. Klicke auf die weiteren Optionen (icon:more_vert[set=material]).
+. Wähle die Option (icon:lock[set=material]) *Auftrag schließen*. +
 → Das Fenster *Auftrag schließen* wird geöffnet.
 . Wenn du dir sicher bist, dass du den Auftrag schließen möchtest, klicke auf (icon:lock[set=material]) *Auftrag schließen*. +
 → Der Auftrag wird geschlossen.
