--- a/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
+++ b/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
@@ -425,10 +425,10 @@ Paket auf Palette stellen:
 . Setze neben dem Paket, das du auf eine Palette stellen möchtest, einen Haken (icon:check-square[role="blue"]). +
 *_Tipp:_* Du kannst auch mehrere Pakete auf einmal wählen und diese gesammelt auf eine Palette stellen.
 . Klicke anschließend oben auf die weiteren Optionen (icon:more_vert[set=material]).
-. Wähle die Option *Paket auf Palette stellen* (icon:table-rows[set=material]). +
+. Wähle die Option *Paket auf Palette stellen* (icon:table_rows[set=material]). +
 → Das Fenster *Paket auf Palette stellen* wird geöffnet.
 . Wähle die ID der Palette aus der Dropdown-Liste oder wähle die Option *Neue Palette erstellen*. +
-. Klicke auf *Paket auf Palette stellen* (icon:table-rows[set=material]).
+. Klicke auf *Paket auf Palette stellen* (icon:table_rows[set=material]).
 → Das Paket wird auf die gewählte Palette gestellt.
 
 
@@ -449,7 +449,7 @@ Schnelles Packen verwenden:
 . Klicke auf die weiteren Optionen (icon:more_vert[set=material]).
 . Wähle die Option *Schnelles Packen* (icon:stock[set=plenty]). +
 → Das Fenster *Schnelles Packen* wird geöffnet.
-. Klappe links die Artikeleinstellungen auf (icon:chevron-right[set=material]).
+. Klappe links die Artikeleinstellungen auf (icon:chevron_right[set=material]).
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-quick-packing>>. +
 *_Hinweis:_* Gibt es eine Restmenge an Artikeln, die nicht verpackt werden kann, kannst du wählen, ob die übrigen Artikel in ein weiteres Paket gepackt werden sollen, oder ob du die Artikel unverpackt lassen möchtest.
 . Klicke anschließend auf icon:plus[role="green"] *Hinzufügen*. +
