update contact links in app section

--- a/docs/de-de/modules/app/pages/artikelsuche.adoc
+++ b/docs/de-de/modules/app/pages/artikelsuche.adoc
@@ -176,7 +176,7 @@ Nach Kund:innen suchen:
 ====
 Tippe auf die Fabrik (icon:industry[role="blue"]), um Firmeninformationen zu sehen.
 Hier kannst du beispielsweise prüfen, ob Kund:innen einen prozentualen Skontoabzug erhalten, wenn innerhalb eines bestimmten Zeitrahmens gezahlt wird.
-Beachte, dass dieser Bereich nur dann Informationen enthält, wenn xref:crm:kontakte-verwalten.adoc#90[Firmeninformationen im Kundendatensatz] gespeichert wurden.
+Beachte, dass dieser Bereich nur dann Informationen enthält, wenn xref:crm:kontakt-bearbeiten.adoc#firma[Firmeninformationen im Kundendatensatz] gespeichert wurden.
 
 Tippe auf die Kartenmarkierung (icon:map-marker[role="blue"]), um Adressinformationen zu sehen.
 ====
