update contact links in item section

--- a/docs/de-de/modules/artikel/pages/preise.adoc
+++ b/docs/de-de/modules/artikel/pages/preise.adoc
@@ -147,7 +147,7 @@ Falls ja, dann wähle alle Kundenklassen (icon:check-square[role="blue"]), für 
 Beispiel: Legst du zwei verschiedene Verkaufspreise an, die beide für B2B-Kunden, Amazon DE und das Lieferland Deutschland gelten, dann weiß plentymarkets nicht, welcher Verkaufspreis verwendet werden soll.
 plentymarkets wird zufällig einen der beiden Verkaufspreise verwenden, da beide gleichermaßen gelten.
 
-*_Hinweis_*: xref:crm:kontakte-verwalten.adoc#15[Erstelle die nötigen Kundenklassen] im Voraus, falls sie nicht bereits in deinem plentymarkets System vorhanden sind.
+*_Hinweis_*: xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Erstelle die nötigen Kundenklassen] im Voraus, falls sie nicht bereits in deinem plentymarkets System vorhanden sind.
 
 | *Land*
 |Soll der Verkaufspreis nur für bestimmte Lieferländer gelten? Beispielsweise zahlst du wahrscheinlich unterschiedliche Steuersätze in unterschiedlichen Ländern. Aus diesem Grund willst du vielleicht einen Artikel in einigen Ländern zu einem etwas höheren Preis verkaufen, damit du die Differenz nicht selbst bezahlen musst.
@@ -233,7 +233,7 @@ Ein zusätzlicher Konfigurationsschritt wird eingeblendet. In diesem Schritt gib
 Beispiel: Legst du zwei verschiedene Verkaufspreise an, die beide für B2B-Kunden, Amazon DE und das Lieferland Deutschland gelten, dann weiß plentymarkets nicht, welcher Verkaufspreis verwendet werden soll.
 plentymarkets wird zufällig einen der beiden Verkaufspreise verwenden, da beide gleichermaßen gelten.
 
-*_Hinweis_*: xref:crm:kontakte-verwalten.adoc#15[Erstelle die nötigen Kundenklassen] im Voraus, falls sie nicht bereits in deinem plentymarkets System vorhanden sind.
+*_Hinweis_*: xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Erstelle die nötigen Kundenklassen] im Voraus, falls sie nicht bereits in deinem plentymarkets System vorhanden sind.
 
 | *Mengenabhängigkeit*
 |Sollte der Verkaufspreis nur gelten, wenn ein Kunde mehrere Exemplare des Artikels kauft?
