--- a/docs/de-de/modules/artikel/partials/lieferant.adoc
+++ b/docs/de-de/modules/artikel/partials/lieferant.adoc
@@ -11,10 +11,10 @@
 |Einstellung |Erläuterung
 
 | *Lieferant*
-|Der Firmenname des Lieferanten, wie er im xref:crm:kontakte-verwalten.adoc#100[Kontaktdatensatz] gespeichert wurde.
+|Der Firmenname des Lieferanten, wie er im xref:crm:kontakt-bearbeiten.adoc#erlaeuterungen-einzelne-bereiche[Kontaktdatensatz] gespeichert wurde.
 
 | *Lieferantenname*
-|Der Vor- und Nachname des Lieferanten, wie er im xref:crm:kontakte-verwalten.adoc#100[Kontaktdatensatz] gespeichert wurden.
+|Der Vor- und Nachname des Lieferanten, wie er im xref:crm:kontakt-bearbeiten.adoc#erlaeuterungen-einzelne-bereiche[Kontaktdatensatz] gespeichert wurden.
 
 | *Lieferanten-Artikel-Nr.*
 |Gib die Nummer ein, unter der dein Lieferant die Variante führt.
@@ -33,7 +33,7 @@
 |Ist dein Lieferant aus einem anderen Land tätig und verwendet eine andere Währung?
 Gib den Einkaufspreis der Variante in der Währung deines Lieferanten ein.
 
-*_Hinweis_*: Welche Währung hier angezeigt wird, hängt davon ab, welche xref:crm:kontakte-verwalten.adoc#100[Währung im Kontaktdatensatz gespeichert] wurde.
+*_Hinweis_*: Welche Währung hier angezeigt wird, hängt davon ab, welche xref:crm:kontakt-bearbeiten.adoc#erlaeuterungen-einzelne-bereiche[Währung im Kontaktdatensatz gespeichert] wurde.
 Bei einer xref:warenwirtschaft:nachbestellungen-vornehmen.adoc#[Nachbestellung] wird diese Währung verwendet, falls verfügbar.
 
 | *Mindestabnahme*
