--- a/docs/en-gb/modules/item/pages/prices.adoc
+++ b/docs/en-gb/modules/item/pages/prices.adoc
@@ -146,7 +146,7 @@ If so, then select all of the customer classes (icon:check-square[role="blue"]) 
 Example: If you create two different sales prices that are both valid for B2B customers, Amazon UK and the country UK, then plentymarkets will not know which sales price to use.
 plentymarkets will randomly choose one of the sales prices since both apply equally.
 
-*_Note_*: xref:crm:managing-contacts.adoc#15[Create the necessary customer classes] in advance, if they don’t already exist in your plentymarkets system.
+*_Note_*: xref:crm:preparatory-settings.adoc#create-customer-class[Create the necessary customer classes] in advance, if they don’t already exist in your plentymarkets system.
 
 | *Country*
 |Should the sales price only apply to specific countries of delivery? For example, you probably pay different tax rates in different countries. As such, you might want to sell an item for a slightly higher price in some countries, rather than pay the difference yourself.
@@ -232,7 +232,7 @@ An additional configuration step will appear. During this step, you’ll specify
 Example: If you create two different sales prices that are both valid for B2B customers, Amazon UK and the country UK, then plentymarkets will not know which sales price to use.
 plentymarkets will randomly choose one of the sales prices since both apply equally.
 
-*_Note_*: xref:crm:managing-contacts.adoc#15[Create the necessary customer classes] in advance, if they don’t already exist in your plentymarkets system.
+*_Note_*: xref:crm:preparatory-settings.adoc#create-customer-class[Create the necessary customer classes] in advance, if they don’t already exist in your plentymarkets system.
 
 | *Quantity-based dependency*
 |Should the sales price only apply if a customer buys multiple copies of the item?
