--- a/docs/de-de/modules/artikel/pages/hersteller.adoc
+++ b/docs/de-de/modules/artikel/pages/hersteller.adoc
@@ -52,7 +52,7 @@ Die Idee ist ganz einfach. Anstatt Herstellerinformationen in plentymarkets manu
 [TIP]
 .Kann ich meine Herstellerdaten stattdessen im CRM-Bereich speichern?
 ====
-Vielleicht hast du schon mal bemerkt, dass du xref:crm:kontakte-verwalten.adoc#90[Herstellerdatensätze im CRM-Bereich erstellen] kannst.
+Vielleicht hast du schon mal bemerkt, dass du xref:crm:kontakt-erstellen.adco#kontakt-erstellen[Herstellerdatensätze im CRM-Bereich erstellen] kannst.
 Sei aber vorsichtig.
 Diese Daten werden nämlich nicht im Menü *Einrichtung » Artikel » Hersteller* übernommen.
 Daher empfehlen wir dir, die Herstellerdaten im CRM-Bereich vorerst zu ignorieren.
