--- a/docs/en-gb/modules/item/pages/manufacturers.adoc
+++ b/docs/en-gb/modules/item/pages/manufacturers.adoc
@@ -52,7 +52,7 @@ The idea is simple. Rather than manually saving manufacturer information in plen
 [TIP]
 .Can I save my manufacturer data in the CRM menu instead?
 ====
-Maybe you noticed that it’s possible to xref:crm:managing-contacts.adoc#90[create manufacturer data records in the CRM menu].
+Maybe you noticed that it’s possible to xref:crm:create-contact.adoc#create-contact[create manufacturer data records in the CRM menu].
 But be careful.
 This data is not transferred over to the menu *Setup » Item » Manufacturers*.
 Therefore, we recommend that you ignore the manufacturer data in the CRM menu for now.
