--- a/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
+++ b/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
@@ -3,7 +3,7 @@
 :description: Erfahre, wie du mit der Paketinhaltsliste 2.0 in plentymarkets arbeitest.
 :author: team-payment-fulfillment
 
-Auf dieser Handbuchseite erfährst du, wie du die Paketinhaltsliste 2.0 in plentymarkets verwendest. Die Paketinhaltsliste gibt Auskunft über den Inhalt von Paletten, Paketen und den darin enthaltenen Artikeln. Dabei entscheidest du, wie deine Pakete gepackt werden und kannst diese mit nur wenigen Klicks bequem verwalten. Du möchtest deine Paketinhaltsliste an deinen Fulfillment-Dienstleister übergeben? Kein Problem - nutze dazu den CSV-Export. Außerdem steht dir die neue Funktion <<#quick-packing, Schnelles Packen>> zur Verfügung, mit der du blitzschnell große Mengen von Artikeln auf Pakete verteilen kannst.
+Auf dieser Handbuchseite erfährst du, wie du die Paketinhaltsliste 2.0 in plentymarkets verwendest. Die Paketinhaltsliste gibt Auskunft über den Inhalt von Paletten, Paketen und den darin enthaltenen Artikeln. Dabei entscheidest du, wie deine Pakete gepackt werden und kannst diese mit nur wenigen Klicks bequem verwalten. Du möchtest deine Paketinhaltsliste an deinen Fulfillment-Dienstleister übergeben? Kein Problem - nutze dazu den <<#export-order-content-as-csv, CSV-Export>>. Außerdem steht dir die neue Funktion <<#quick-packing, Schnelles Packen>> zur Verfügung, mit der du blitzschnell große Mengen von Artikeln auf Pakete verteilen kannst.
 
 Das Menü *Aufträge » Paketinhaltsliste 2.0* ist wie folgt aufgebaut:
 
@@ -28,7 +28,7 @@ Du findest die folgenden Neuerungen in der Paketinhaltsliste 2.0, die es vorher 
 * Dank Gruppenfunktionen kannst du verschiedene Aktionen für mehrere Pakete oder Paletten auf einmal ausführen.
 * Die Funktion <<#use-quick-packing, Schnelles Packen>> ist neu hinzugekommen und ist besonders bei großen Aufträgen hilfreich, da du damit viele Pakete auf einmal packen kannst.
 * Dank einer Verknüpfung zu xref:maerkte:amazon-fba-nutzen.adoc#[Amazon FBA] kannst du das Versenden deiner Ware auch dem <<#use-amazon-fba-service, FBA-Service>> überlassen.
-* Du kannst deine Auftragsinhalte nun als CSV-Datei exportieren.
+* Du kannst deine Auftragsinhalte nun <<#export-order-content-as-csv, als CSV-Datei exportieren>>.
 --
 
 [#assign-user-rights]
@@ -202,6 +202,27 @@ Weitere Informationen zu den Einstellungen für den Amazon FBA-Service in Verbin
 Neuen Button im Menü Amazon FBA Inbound auf Inbound-Seite beschreiben + Links zur alten PCL anpassen und stattdessen auf neue PCL verlinken oder laufen beide parallel …dann alte Konfig kopieren und für neuen Button anpassen??. - Kathrin kontaktieren
 Aktuelle Konfig anpassen (Titel des Buttons anpassen!)
 ////
+
+[#export-order-content-as-csv]
+== Auftragsinhalte als CSV-Datei exportieren
+
+In der Paketinhaltsliste 2.0 kannst du die Inhalte deiner Aufträge bei Bedarf als CSV-Datei exportieren. Dies ist auch für mehrere Aufträge auf einmal möglich. Um deine Auftragsinhalte in einer CSV-Datei zu exportieren, gehe vor wie folgt.
+
+[.instruction]
+Auftragsinhalte als CSV-Datei exportieren:
+
+. Öffne das Menü *Aufträge » Paketinhaltsliste 2.0*.
+. Suche den Auftrag anhand der Filtereinstellungen. Beachte dazu die Erläuterungen in <<#search-orders, Aufträge suchen>>. +
+→ Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
+. Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
+. Klicke oben auf *Auftragsinhalte als CSV-Datei exportieren* (icon:receipt_long[set=material]). +
+→ Die Auftragsinhalte werden als CSV-Datei exportiert.
+
+[TIP]
+.Inhalte mehrerer Aufträge als CSV-Datei exportieren
+======
+Möchtest du die Inhalte mehrerer Aufträge als CSV-Datei exportieren, setze in der Übersicht neben allen gewünschten Aufträgen einen Haken (icon:check-square[role="blue"]). Klicke anschließend oben auf *Auftragsinhalte als CSV-Datei exportieren* (icon:receipt_long[set=material]). Die Inhalte aller gewählten Aufträge werden dann gesammelt in einer CSV-Datei exportiert.
+======
 
 [#work-with-pallets]
 == Mit Paletten arbeiten
@@ -380,14 +401,14 @@ Artikel verpacken:
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
 . Klicke auf das Paket, um die Artikel anzuzeigen.
-. Setze links im Bereich *Unverpackte Artikel* einen Haken neben den Artikeln, die du dem Paket hinzufügen möchtest.
+. Setze links im Bereich *Unverpackte Artikel* einen Haken (icon:check-square[role="blue"]) neben den Artikeln, die du dem Paket hinzufügen möchtest.
 . Klicke auf icon:plus[role="darkGrey"] *Artikel zum Paket hinzufügen*. +
 → Die Artikel werden in den Bereich *Verpackte Artikel* verschoben und somit dem Paket hinzugefügt.
 
 [TIP]
 .Verpackte Artikel aus Paket entfernen
 ======
-Möchtest du Artikel aus einem Paket wieder entfernen, setze neben den Artikeln im Bereich *Verpackte Artikel* einen Haken und klicke auf *Artikel aus dem Paket entfernen* (icon:delete[set=material]). Klicke anschließend auf icon:delete[set=material] *Löschen*, um die Artikel aus dem Paket zu entfernen.
+Möchtest du Artikel aus einem Paket wieder entfernen, setze neben den Artikeln im Bereich *Verpackte Artikel* einen Haken (icon:check-square[role="blue"]) und klicke auf *Artikel aus dem Paket entfernen* (icon:delete[set=material]). Klicke anschließend auf icon:delete[set=material] *Löschen*, um die Artikel aus dem Paket zu entfernen.
 ======
 
 [#edit-items]
@@ -428,7 +449,7 @@ Paket auf Palette stellen:
 . Wähle die Option *Paket auf Palette stellen* (icon:table_rows[set=material]). +
 → Das Fenster *Paket auf Palette stellen* wird geöffnet.
 . Wähle die ID der Palette aus der Dropdown-Liste oder wähle die Option *Neue Palette erstellen*. +
-. Klicke auf *Paket auf Palette stellen* (icon:table_rows[set=material]).
+. Klicke auf *Paket auf Palette stellen* (icon:table_rows[set=material]). +
 → Das Paket wird auf die gewählte Palette gestellt.
 
 
