ADJUST order status

--- a/docs/de-de/modules/maerkte/pages/amazon-fba-nutzen.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-fba-nutzen.adoc
@@ -751,7 +751,7 @@ FBA-Inbound-Aufträge anzeigen:
 
 | *Auftragsstatus*
 | Status wählen, um nach Aufträgen in diesem Status zu suchen. +
-Die Status *Offen*, *Erledigt* und *Alle* stehen zur Verfügung. +
+Die Auftragsstatus *Offen*, *Erledigt* und *Alle* stehen zur Verfügung. +
 *_Hinweis:_* Wenn du den Versand von einem Amazon-Transportpartner durchführen lässt, werden im Status *Erledigt* alle Aufträge angezeigt, die bestätigt wurden. Wenn du mit einem eigenen Versanddienstleister versendest, werden im Status *Erledigt* alle Aufträge angezeigt, bei denen bereits eine Sendungsnummer vorhanden ist.
 
 2+^| Angezeigte Informationen
@@ -795,7 +795,7 @@ a|Der Status, in dem sich die Amazon-Sendung aktuell befindet. Die folgenden, be
 
 | *Auftragsstatus*
 | Status des Auftrags. +
-Es gibt die Status *Offen*, *Erledigt* und *Alle*.
+Es gibt die Auftragsstatus *Offen*, *Erledigt* und *Alle*.
 |====
 
 [#customise-columns]
