Fixed broken links

--- a/docs/de-de/modules/maerkte/pages/varianten-exportieren-katalog.adoc
+++ b/docs/de-de/modules/maerkte/pages/varianten-exportieren-katalog.adoc
@@ -349,7 +349,7 @@ Wenn du weitere Amazon-Services nutzen möchtest:
 
 Wenn was schiefgegangen ist:
 
-* xref:maerkte:faq-sammlung.adoc#[Liste der FAQs und Lösungen]
+* xref:maerkte:amazon-faq-sammlung.adoc#[Liste der FAQs und Lösungen]
 
 '''
 
