--- a/docs/en-gb/modules/markets/pages/variation-export.adoc
+++ b/docs/en-gb/modules/markets/pages/variation-export.adoc
@@ -345,7 +345,7 @@ If you want to use additional Amazon services:
 
 If something went wrong:
 
-* xref:markets:faq-collection.adoc#[List of FAQs and solutions]
+* xref:markets:amazon-faq-collection.adoc#[List of FAQs and solutions]
 
 '''
 
