--- a/docs/de-de/modules/auftraege/pages/buchhaltung.adoc
+++ b/docs/de-de/modules/auftraege/pages/buchhaltung.adoc
@@ -349,7 +349,7 @@ Stelle ein Datum ein, wenn du z.B. nicht länger steuerpflichtig in einem Liefer
 *_Wichtig_*: Bei manueller Eingabe das Jahr vierstellig eintragen, da eine zweistellige Eingabe, z.B. 14 statt 2014, zu Fehlern führt.
 
 | *Nur für digitale Artikel*
-|Aktiviere diese Option, wenn die Steuerkonfiguration nur für digitale Artikel gelten soll. Beachte das Kapitel xref:buchahltung:auftraege.adoc#600[Umsatzsteuer für digitale Artikel].
+|Aktiviere diese Option, wenn die Steuerkonfiguration nur für digitale Artikel gelten soll. Beachte das Kapitel xref:buchhaltung:auftraege.adoc#600[Umsatzsteuer für digitale Artikel].
 
 |====
 
@@ -599,7 +599,7 @@ Wähle das Datenformat und erstelle beispielsweise einen Export vom Typ *Finanzb
 | Der Export ist für die ERP-Lösung link:http://www.collmex.de[Collmex] optimiert und exportiert Umsatz- oder Kund:innen-Daten. Es können Daten eines oder mehrerer Standorte exportiert werden, um diese Daten in link:http://collmex.de/cgi-bin/cgi.exe?1005,1,help,daten_importieren[Collmex zu importieren]. Beim Export von Umsatzdaten werden für die korrekte Zuordnung die link:http://www.collmex.de/handbuch_basic.html#zahlungsbedingung_anlegen[Zahlungsbedingungs-IDs] von Collmex verwendet.
 
 | *Finanzbuchhaltung*
-| Der Export im CSV-Format enthält optional Daten der Warenausgangsrechnungen, der Kassenbelege der xref:main@manual:pos.adoc[plentymarkets Kasse] oder sowohl der Rechnungen als auch der Belege. Der Export ist link:https://www.datev.de/web/de/startseite/startseite-n/[DATEV]-konform. Es können Daten eines oder mehrerer Standorte exportiert werden. Als Import-Code den Zeichensatz UTF-8 und als Trennzeichen Semikolon wählen. +
+| Der Export im CSV-Format enthält optional Daten der Warenausgangsrechnungen, der Kassenbelege der xref:pos:pos.adoc#[plentymarkets Kasse] oder sowohl der Rechnungen als auch der Belege. Der Export ist link:https://www.datev.de/web/de/startseite/startseite-n/[DATEV]-konform. Es können Daten eines oder mehrerer Standorte exportiert werden. Als Import-Code den Zeichensatz UTF-8 und als Trennzeichen Semikolon wählen. +
 *_Tipp:_* Für den CSV-Import eine Software verwenden, bei der diese Parameter vor dem Datenimport auswählbar sind.
 
 | *Hersteller-Provisionen*
