ADD more work to the directory page

--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -59,8 +59,9 @@
 *** xref:artikel:callisto-vorlagen.adoc[Artikelvorlagen (nicht empfohlen)]
 ** xref:artikel:neue-ui.adoc[Neue Artikel-UI (open beta)]
 *** xref:artikel:artikelsuche.adoc[Artikel suchen]
-*** xref:artikel:detailansicht.adoc[Detailansicht: Gestaltung]
 *** xref:artikel:artikel-manuell-anlegen.adoc[Artikel und Varianten manuell anlegen]
+*** xref:artikel:detailansicht.adoc[Detailansicht: Gestaltung]
+*** xref:artikel:verzeichnis.adoc[Detailansicht: Verzeichnis der Datenfelder]
 * xref:warenwirtschaft:warenwirtschaft.adoc[Waren]
 ** xref:warenwirtschaft:preparation.adoc[Vorbereitende Einstellungen]
 *** xref:warenwirtschaft:lager-einrichten.adoc[Lager planen]
