--- a/docs/de-de/modules/artikel/partials/aktionsgutschein.adoc
+++ b/docs/de-de/modules/artikel/partials/aktionsgutschein.adoc
@@ -4,7 +4,7 @@ Wähle die passende Antwort aus der Dropdown-Liste.
 
 * *Möglich* = Beim Kauf einer Variante des Artikels kann ein xref:pos:pos-einrichten.adoc#2100[Aktionsgutschein] eingelöst werden. Beim Verkauf über plentyPOS kann Kassenpersonal einen Rabatt auf den Artikel geben. Kundenklassenrabatte werden automatisch angewendet. +
 * *Verboten* = Beim Kauf einer Variante des Artikels können keine xref:pos:pos-einrichten.adoc#2100[Aktionsgutscheine] eingelöst werden. Beim Verkauf über plentyPOS kann Kassenpersonal keinen Rabatt auf den Artikel geben. Kundenklassenrabatte werden nicht angewendet. +
-* *Nur mit Aktionsgutschein kaufbar* = Die Variant des Artikels kann nur gekauft werden, wenn der Code eines xref:pos:pos-einrichten.adoc#2100[Aktionsgutscheins] eingegeben wird. +
+* *Nur mit Gutschein kaufbar* = Die Variant des Artikels kann nur gekauft werden, wenn der Code eines xref:pos:pos-einrichten.adoc#2100[Aktionsgutscheins] eingegeben wird. +
 endif::manual[]
 
 ifdef::import[]
