--- a/docs/de-de/modules/artikel/partials/aktiv.adoc
+++ b/docs/de-de/modules/artikel/partials/aktiv.adoc
@@ -1,5 +1,5 @@
 ifdef::manual[]
-Aktiviere die Variante (icon:check-square[role="blue"]), sobald sie veröffentlicht werden soll.
+Aktiviere die Variante (icon:toggle-on[role="blue"]), sobald sie veröffentlicht werden soll.
 endif::manual[]
 
 ifdef::import[]
