--- a/docs/de-de/modules/artikel/partials/automatisch-nicht-verfuegbar.adoc
+++ b/docs/de-de/modules/artikel/partials/automatisch-nicht-verfuegbar.adoc
@@ -1,5 +1,5 @@
 ifdef::manual[]
-Wähle diese Option (icon:check-square[role="blue"]), wenn die Variante automatisch nicht käuflich sein soll, wenn kein Nettowarenbestand vorhanden ist.
+Wähle diese Option (icon:toggle-on[role="blue"]), wenn die Variante automatisch nicht käuflich sein soll, wenn kein Nettowarenbestand vorhanden ist.
 endif::manual[]
 
 ifdef::import[]
