--- a/docs/de-de/modules/artikel/partials/automatisch-sichtbar.adoc
+++ b/docs/de-de/modules/artikel/partials/automatisch-sichtbar.adoc
@@ -1,5 +1,5 @@
 ifdef::manual[]
-Wähle diese Option (icon:check-square[role="blue"]), wenn die Variante bei positivem Netto-Warenbestand automatisch im plentyShop sichtbar sein soll.
+Wähle diese Option (icon:toggle-on[role="blue"]), wenn die Variante bei positivem Netto-Warenbestand automatisch im plentyShop sichtbar sein soll.
 endif::manual[]
 
 ifdef::import[]
