--- a/docs/de-de/modules/artikel/partials/automatisch-verfuegbar.adoc
+++ b/docs/de-de/modules/artikel/partials/automatisch-verfuegbar.adoc
@@ -1,5 +1,5 @@
 ifdef::manual[]
-Wähle diese Option (icon:check-square[role="blue"]), wenn die Variante bei positivem Nettowarenbestand automatisch im plentyShop verfügbar und käuflich sein soll.
+Wähle diese Option (icon:toggle-on[role="blue"]), wenn die Variante bei positivem Nettowarenbestand automatisch im plentyShop verfügbar und käuflich sein soll.
 endif::manual[]
 
 ifdef::import[]
