--- a/docs/de-de/modules/artikel/partials/gewicht-brutto.adoc
+++ b/docs/de-de/modules/artikel/partials/gewicht-brutto.adoc
@@ -1,5 +1,5 @@
 ifdef::manual[]
-Gib das Bruttogewicht der Variante in Gramm oder Kilogramm ein.
+Gib das Bruttogewicht der Variante in Gramm ein.
 endif::manual[]
 
 ifdef::import[]
