--- a/docs/de-de/modules/artikel/partials/grundpreisanzeige.adoc
+++ b/docs/de-de/modules/artikel/partials/grundpreisanzeige.adoc
@@ -1,5 +1,5 @@
 ifdef::manual[]
-Wähle diese Option (icon:check-square[role="blue"]), wenn der Grundpreis im plentyShop angezeigt werden soll.
+Wähle diese Option (icon:toggle-on[role="blue"]), wenn der Grundpreis im plentyShop angezeigt werden soll.
 endif::manual[]
 
 ifdef::import[]
