--- a/docs/de-de/modules/artikel/partials/immer-unsichtbar.adoc
+++ b/docs/de-de/modules/artikel/partials/immer-unsichtbar.adoc
@@ -1,5 +1,5 @@
 ifdef::manual[]
-Wähle diese Option (icon:check-square[role="blue"]), wenn die Variante ausschließlich über die direkte URL erreichbar sein soll.
+Wähle diese Option (icon:toggle-on[role="blue"]), wenn die Variante ausschließlich über die direkte URL erreichbar sein soll.
 Wenn die Option aktiviert ist, wird die Variante immer in den Artikellisten deines Webshops unsichtbar sein.
 Das heißt, die Variante wird nicht in den Kategorien, Suchergebnissen, Shop-Aktionen, Cross-Selling-Listen und Listen der zuletzt gesehenen Artikel angezeigt.
 endif::manual[]
