--- a/docs/de-de/modules/artikel/partials/packstuecke-anzahl.adoc
+++ b/docs/de-de/modules/artikel/partials/packstuecke-anzahl.adoc
@@ -1,5 +1,5 @@
 ifdef::manual[]
-Wähle die Anzahl der Packstücke aus der Dropdown-Liste, wenn der Artikel aus mehreren Paketen besteht.
+Gib die Anzahl der Packstücke ein, wenn der Artikel aus mehreren Paketen besteht.
 endif::manual[]
 
 ifdef::import[]
