--- a/docs/de-de/modules/artikel/partials/symbol.adoc
+++ b/docs/de-de/modules/artikel/partials/symbol.adoc
@@ -1,6 +1,6 @@
 ifdef::manual[]
 Wie lang ist die Lieferzeit der Variante?
-Wähle (icon:dot-circle-o[role="blue"]) die passende Verfügbarkeitsstufe (1-10).
+Wähle die passende Verfügbarkeitsstufe aus der Dropdown-Liste.
 endif::manual[]
 
 ifdef::import[]
