--- a/docs/de-de/modules/artikel/partials/artikelauflistung-automatisch-sichtbar.adoc
+++ b/docs/de-de/modules/artikel/partials/artikelauflistung-automatisch-sichtbar.adoc
@@ -1,5 +1,5 @@
 ifdef::manual[]
-Wähle diese Option (icon:check-square[role="blue"]), wenn die Variante bei positivem Netto-Warenbestand in den Artikellisten deines Webshops sichtbar sein soll.
+Wähle diese Option (icon:toggle-on[role="blue"]), wenn die Variante bei positivem Netto-Warenbestand in den Artikellisten deines Webshops sichtbar sein soll.
 Das heißt, die Variante wird in den Kategorien, Suchergebnissen, Shop-Aktionen, Cross-Selling-Listen und Listen der zuletzt gesehenen Artikel angezeigt.
 
 *_Hinweis_*: Die Funktionen *Automatisch sichtbar wenn Netto-WB positiv* und *Automatisch unsichtbar wenn kein Netto-WB* ergänzen sich und greifen nur, wenn die Option xref:artikel:artikel-verwalten.adoc#intable-beschraenkung[Beschränkung] auf *Auf Netto-WB* gestellt ist.
