FIX small issues

--- a/docs/de-de/modules/artikel/pages/verzeichnis.adoc
+++ b/docs/de-de/modules/artikel/pages/verzeichnis.adoc
@@ -1355,7 +1355,7 @@ Da sich diese Einstellung auf den plentyShop bezieht und manche Verkäufer mehre
 Diese Spalte gibt an, welche der verknüpften Kategorien die Standardkategorie des Mandanten ist.
 Wie du die Standardkategorie festlegst, wird in der obigen Anleitung beschrieben.
 
-| icon:trash[role="darkGrey"]
+| icon:delete[set=material, role="darkGrey"]
 |Löscht die Verknüpfung zwischen der Kategorie und der Variante.
 Es wird nur die Verknüpfung gelöscht.
 Diese Schaltfläche löscht weder die Kategorie noch die Variante.
@@ -1813,7 +1813,7 @@ Intern werden ausschließlich Bruttopreise in der Datenbank gespeichert.
 [TIP]
 .Verknüpfung wieder löschen
 ====
-Öffne die Variante und klicke in der Zeile des Verkaufspreises auf icon:trash[role="darkGrey"].
+Öffne die Variante und klicke in der Zeile des Verkaufspreises auf icon:delete[set=material, role="darkGrey"].
 Dadurch wird die Verknüpfung zwischen dem Verkaufspreis und der Variante gelöscht.
 Der Verkaufspreis selbst wird nicht gelöscht.
 Der Verkaufspreis wird lediglich aus der Variante entfernt.
@@ -2025,36 +2025,37 @@ Ein Beispiel für nützliche Rechte eines Content-Mitarbeiters, findest du unten
 . *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
 . Sollte das Problem weiterhin bestehen, wende dich an die link:https://forum.plentymarkets.com/c/item/18[Supporter im Forum^].
 
-.Beispiel-Rechte eines Content-Mitarbeiters
 [cols="1a,1a"]
 |====
 |Berechtigungen |Menü-Sichtbarkeiten
 
-|Erforderlich:
+|*Erforderlich*:
 
-* *Artikel » Neue Artikel UI » Anzeigen*
+* Artikel » Neue Artikel UI » Anzeigen
 
-Empfohlen:
+*Empfohlen*:
 
-* *Artikel » [Alle Unterpunkte] » Anzeigen*
-* *Artikel » [Alle Unterpunkte] » [Weitere Rechte bei Bedarf]*
-* *Einrichtung » Tag » Anzeigen*
-* *Einrichtung » Tag » Tag-Verknüpfung » [Alle Unterpunkte]*
+* Artikel » [Alle Unterpunkte] » Anzeigen
+* Artikel » [Alle Unterpunkte] » [Weitere Rechte bei Bedarf]
+* Einrichtung » Tag » Anzeigen
+* Einrichtung » Tag » Tag-Verknüpfung » [Alle Unterpunkte]
 
-|Erforderlich:
+|*Erforderlich*:
 
-* *Artikel » Artikel-UI*
+* Artikel » Artikel-UI
 
-Empfohlen:
+*Empfohlen*:
 
-* *Artikel » [Alle Unterpunkte]*
-* *Einrichtung » Einstellungen » Tags*
-* *Einrichtung » Artikel » [Einzelne Rechte bei Bedarf]*
+* Artikel » [Alle Unterpunkte]
+* Einrichtung » Einstellungen » Tags
+* Einrichtung » Artikel » [Einzelne Rechte bei Bedarf]
 |====
+
+*_Hinweis_*: Dies sind nur Beispiel-Rechte eines Content-Mitarbeiters. Die Liste erhebt keinen Anspruch auf Vollständigkeit.
 
 ---
 
-*_Rechte zu einer bestimmten Ansicht_*:
+*_Rechte zur Nutzung einer Ansicht_*:
 
 Admin-Nutzer können den Zugriff auf jede Ansicht einzeln gewähren.
 
@@ -2066,7 +2067,7 @@ Admin-Nutzer können den Zugriff auf jede Ansicht einzeln gewähren.
 
 ---
 
-*_Rechte zur Gestaltung der Produkt-Ansichten_*:
+*_Rechte zur Gestaltung einer Ansicht_*:
 
 Nur xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#[Admin-Nutzer] können Ansichten erstellen und bearbeiten.
 Falls du kein Admin bist:
