--- a/docs/de-de/modules/artikel/pages/detailansicht.adoc
+++ b/docs/de-de/modules/artikel/pages/detailansicht.adoc
@@ -86,7 +86,7 @@ image::artikel:detailansicht-elemente.gif[]
 | icon:pencil[role="blue"]
 |Führt eine Ebene tiefer.
 
-| icon:trash[role="blue"]
+| icon:delete[set=material, role="blue"]
 |Löscht das Element.
 
 | icon:close[role="blue"]
@@ -149,10 +149,10 @@ image::artikel:bearbeitung-abschliessen.png[]
 |====
 |Symbol |Erläuterung
 
-| icon:reply[role=darkGrey]
+| icon:undo[set=material, role="darkGrey"]
 |Macht die letzte Änderung rückgängig, soweit die betreffende Änderung noch nicht gespeichert wurde.
 
-| icon:share[role=darkGrey]
+| icon:redo[set=material, role="darkGrey"]
 |Stellt eine rückgängig gemachte Änderung wieder her.
 
 | icon:caret-down[role="darkGrey"]
